--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -18,16 +18,23 @@ form.new_user > div.field {
   border-bottom: 1px dotted #333333;
 }
 
-div.field.field-with-errors {
+div.field-with-errors {
   border: 3px solid red !important;
   padding: 10px !important;
+  margin: 10px 0;
+}
+
+form.new_user div.field.field-with-errors {
   margin-left: 10px !important;
   margin-right: 10px !important;
 }
 
+form.new_user div.field-with-errors > p {
+  margin-bottom: -10px;
+}
+
 div.field-with-errors > p {
   font-size: 14px;
-  margin-bottom: -10px;
 }
 
 div.field label {
@@ -56,7 +63,7 @@ div.address {
   float: left;
 }
 
-form.new_user input[type="submit"] {
+input[type="submit"] {
   border: 0;
   border-bottom: 3px solid #333333;
   font-size: 18px;
