--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -64,7 +64,7 @@
 $(document).ready(function() {
   var $lightbox = $("div.lightbox");
   var totalPics = <%= @listing.pics.count %>;
-  currentPic = 1;
+  var currentPic = 1;
 
   var width = <%= @listing.pics.count * 600 %>
   $("div.viewport > ul").css("width", width);
@@ -73,48 +73,58 @@ $(document).ready(function() {
   <% end %>
 
   $("img.car-pic").click(function() {
-    $("body").toggleClass("no-scroll");
-    $lightbox.toggleClass("show");
+    $("body").addClass("no-scroll");
+    $lightbox.addClass("show");
     setViewportCSS();
   });
 
+  $("div.lightbox").click(function(event) {
+    exitLightbox();
+  });
+
+  $(".viewport").click(function(event){
+    event.stopPropagation();
+  });
+
+  $("#scroll-viewport-left").click(moveViewport.bind(this, 600));
+  $("#scroll-viewport-right").click(moveViewport.bind(this, -600));
+
+  $(window).keydown(function(event) {
+    if (event.keyCode == 27) { exitLightbox() }
+    else if (event.keyCode == 37) { moveViewport(600) }
+    else if (event.keyCode == 39) { moveViewport(-600) }
+  });
+
   function setViewportCSS() {
-    var imgHeight = $($("div.viewport > ul > li > img")[currentPic-1]).css("height");
+    var imgHeight = $($("div.viewport img")[currentPic-1]).css("height");
 
     $("div.viewport").css("height", imgHeight);
 
     $("div.viewport").css("margin", function() {
-      var viewPortHeight = parseInt($("div.viewport").css("height"));
-      var newMargin = (viewPortHeight - imgHeight)/2;
-      if (newMargin > 0) { newMargin = 0 }
+      var lightboxHeight = parseInt($(document).css("height"));
+      var newMargin = (lightboxHeight - imgHeight)/2;
+      if (newMargin < 0) { newMargin = 50 }
 
       return "" + newMargin + "px auto";
     });
   };
 
+  function exitLightbox() {
+    $lightbox.removeClass("show");
+    $("body").removeClass("no-scroll");
+  };
 
-  $(window).keydown(function(event) {
-    if (event.keyCode == 27) { // ESC pressed
-      $lightbox.removeClass("show");
-      $("body").toggleClass("no-scroll");
-    }
-    else if (event.keyCode == 37 && currentPic > 1 && $lightbox.hasClass("show")) {
-      currentPic--;
+  function moveViewport(delta) {
+    if ((delta > 0 && currentPic != 1) || (delta < 0 && currentPic != totalPics) && $lightbox.hasClass("show")) {
+      if (delta > 0) { currentPic-- }
+      else { currentPic++ }
       $("div.viewport > ul").css("left", function(i, val) {
-        return ""+(parseInt(val) + 600)+"px";
+        return ""+(parseInt(val) + delta)+"px";
       });
-
-      setViewportCSS();
     }
-    else if (event.keyCode == 39 && currentPic < totalPics && $lightbox.hasClass("show")) {
-      currentPic++;
-      $("div.viewport > ul").css("left", function(i, val) {
-        return ""+(parseInt(val) - 600)+"px";
-      });
 
-      setViewportCSS();
-    }
-  });
+    setViewportCSS();
+  };
 });
 </script>
 
