Awesome picture uploading. Just need to deal with pic#src in controller on second post.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -157,7 +157,7 @@ span.flash.success {
 }
 
 span.flash.alert, span.flash.failure, span.flash.error {
-  background: #FF1975;
+  background: red;
 }
 
 span.flash.notice {
