--- a/app/views/users/_dashboard.html.erb
+++ b/app/views/users/_dashboard.html.erb
@@ -3,6 +3,6 @@
 <%= link_to "Sell a car!", new_listing_url %>
 
 <% unless @user.listings.empty? %>
-  <h2>Your <%= pluralize("listing") %></h2>
+  <h2>Your <%= "listing".pluralize(@user.listings.count) %></h2>
   <%= render @user.listings %>
 <% end %>
