--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     </div>
   </div>
   <header>
-    <h1>TOMMY'S CARS</h1>
+    <h1><%= image_tag "car_icon.png" %>TOMMY'S CARS</h1>
 
     <% if params[:controller] != "user_sessions" %>
     <div class="signin">
