--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,8 @@ input[type="submit"]:hover {cursor: pointer;}
   clear: both;
 }
 
+/*html { margin-top: -30px;}*/
+
 body {
   background-color: white;
   padding-bottom: 100px;
@@ -46,15 +48,16 @@ body > header {
   position: relative;
   width: 800px;
   margin: 0 auto;
+  padding: 20px 0 0 0;
 }
 
 body > header > h1 {
   display: block;
+  padding: 0 0 10px 0;
   text-align: center;
   vertical-align: bottom;
   font-size: 55px;
   font-weight: 100;
-  margin: 30px 0 15px 0;
   letter-spacing: 1px;
   font-family: "Trebuchet MS";
 }
@@ -62,7 +65,9 @@ body > header > h1 {
 body > header > h1 > img {
   width: 65px;
   height: auto;
-  margin: 0 25px -10px 0;
+  margin: 0 25px 0 0;
+  position: relative;
+  top: 10px;
 }
 
 body > header > div.signin {
