--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -95,7 +95,46 @@ div.image-file-input-wrapper > .remove {
   top: -5px;
   right: -5px;
   background: black;
+}
 
+div.image-file-input-wrapper > .progress {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.7);
+  color: red;
+  text-align: center;
+  display: none;
+  z-index: 3;
+}
+
+div.image-file-input-wrapper.busy > .progress {
+  display: block;
+}
+
+div.image-file-input-wrapper > img.spinner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+}
+
+div.image-file-input-wrapper.prepping > img.spinner {
+  display: block;
+}
+
+ul.thumbs .progress {
+  line-height: 10px;
+}
+
+.main-pic .progress {
+  font-size: 30px;
+  line-height: 300px;
 }
 
 
