Try xhr.upload.onprogress instead.

--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -95,6 +95,7 @@ div.image-file-input-wrapper > .remove {
   top: -5px;
   right: -5px;
   background: black;
+  z-index: 5;
 }
 
 div.image-file-input-wrapper > .progress {
